# kafka-testing

./: README.md  Tiltfile  run.sh
app_core/: Dockerfile  Dockerfile-celery-worker  pyproject.toml
app_core/src/: manage.py
app_core/src/app_core/: __init__.py  celery_bootstrap.py  settings.py
app_core/src/app_core/interface/: tasks.py  urls.py  views.py
app_peripheral/: Dockerfile-celery-worker  pyproject.toml
app_peripheral/src/: manage.py
app_peripheral/src/app_peripheral/: celery_bootstrap.py  settings.py
app_peripheral/src/app_peripheral/interface/: tasks.py  urls.py  views.py
minikube/: everything.yaml
rabbitmq/: Dockerfile-rabbitmq
