[tool.poetry]
name = "app-peripheral"
version = "0.1.0"
description = ""
authors = ["Tom PRESTON <tom.preston@octoenergy.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"
kombu = "^5.3.4"
celery = "^5.3.6"
amqp = "^5.2.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
flake8 = "^6.1.0"
mypy = "^1.8.0"
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
